--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">StrangeChat-Android</string>
+    <string name="app_name">社交</string>
     <string name="call">呼叫</string>
     <string name="incoming_call">申请和你通话</string>
     <string name="id">ID: %d</string>
